# eHR

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  settings.toml  test.py
apps/company/: models.py  urls.py  views.py
apps/company/templates/company/: company_form.html
apps/core/: tasks.py  urls.py  views.py
apps/core/templates/core/: index.html
apps/department/: models.py  urls.py  views.py
apps/department/templates/department/: department_confirm_delete.html  department_form.html  department_list.html
apps/documents/: models.py  urls.py  views.py
apps/documents/templates/documents/: document_form.html
apps/employee/: models.py  urls.py  views.py
apps/employee/api/: serializers.py  views.py
apps/employee/templates/employee/: employee_confirm_delete.html  employee_form.html  employee_list.html
apps/overtime/: admin.py  forms.py  models.py  reports.py  urls.py  utils.py  views.py
apps/overtime/api/: serializers.py  views.py
apps/overtime/templates/overtime/: overtimeregister_confirm_delete.html  overtimeregister_form.html  overtimeregister_list.html
ehr/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
staticfiles/css/: custom.css  globalstyle.css  login.css  main.css  profile.css  table.css
staticfiles/js/: ajax.js
templates/: base.html
templates/registration/: login.html
