[tool.poetry]
name = "ehr"
version = "0.1.0"
description = ""
authors = ["andrerodrig <andrelmarques11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
dynaconf = "2.2.3"
django-bootstrap-form = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
